--- a/Acme-Circus/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/master-page/messages.properties
@@ -12,6 +12,7 @@ master.page.administrator.categoryTour = Tour categories list
 master.page.administrator.actor	= Actors list
 master.page.administrator.stats = Stats
 master.page.administrator.circus = Circus list
+master.page.invoices = Invoices
 
 master.page.administrator.fee = Fee
 
