--- a/Acme-Circus/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/master-page/messages_es.properties
@@ -7,11 +7,12 @@
 # http://www.tdg-seville.info/License.html
 
 master.page.administrator			= Administrador
-master.page.administrator.categoryTour = Lista de categorï¿½as de gira
+master.page.administrator.categoryTour = Lista de categorías de gira
 master.page.signup.admin			= Nuevo administrador
 master.page.administrator.actor	= Lista de actores
-master.page.administrator.stats = Estadï¿½sticas
+master.page.administrator.stats = Estadísticas
 master.page.administrator.circus = Lista de Circos
+master.page.invoices = Facturas
 
 
 master.page.administrator.fee = Tarifas
