--- a/Acme-Circus/src/main/webapp/views/categoryPrice/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/categoryPrice/messages_es.properties
@@ -19,3 +19,4 @@ categoryPrice.commit.error = Ha ocurrido un error
 categoryPrice.delete.confirmation = ¿Seguro que desea eliminar la categoría?
 categoryPrice.delete = Eliminar
 categoryPrice.aviso = Necesitas tener paradas para poder crear una categoría
+tour.aviso.tags = Separe los tags por comas
