--- a/Acme-Circus/src/main/webapp/views/stop/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/stop/messages.properties
@@ -31,3 +31,4 @@ stop.validated.error = You cant modify a stop whose tour is already validated
 stop.commit.error = Something went wrong
 stop.afterDate.error = Stop date can not be before tour start date
 stop.beforeDate.error = Stop date can not be after tour end date
+stop.samedate.error = There can't be two stops from the same tour at the same date.
