--- a/Acme-Circus/src/main/webapp/views/stop/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/stop/messages_es.properties
@@ -30,4 +30,5 @@ stop.delete.confirmation = ¿Está seguro que desea eliminar esta parada?
 stop.validated.error = No puedes modificar una parada cuyo tour está validado.
 stop.commit.error = Ha ocurrido un error
 stop.afterDate.error = La fecha de la parada no puede ser anterior a la fecha de inicio de la gira
+stop.samedate.error = No pueden haber dos paradas del mismo tour con la misma fecha 
 stop.beforeDate.error = La fecha de la parada no puede ser posterior a la fecha de finalización del tour
