--- a/Acme-Circus/src/main/webapp/views/fee/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/fee/messages.properties
@@ -14,3 +14,6 @@ fee.back = Back
 
 fee.commit.error = Cannot commit operation
 fee.success = Changes were applied successfully
+
+fee.euro = &#8364;
+fee.percent = %
