--- a/Acme-Circus/src/main/webapp/views/fee/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/fee/messages_es.properties
@@ -15,3 +15,6 @@ fee.back = Atrás
 
 fee.commit.error = No se pudo completar la operación
 fee.success = Los cambios se guardaron con éxito
+
+fee.euro =&#8364;
+fee.percent = %
