--- a/Acme-Circus/src/main/webapp/views/invoice/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/invoice/messages.properties
@@ -12,9 +12,18 @@ invoice.date = Date
 invoice.description = Description
 invoice.img = Image
 invoice.show = Show
+invoice.fee = Fee
 
 invoice.circusInvoice = Circus invoices
 invoice.bannerInvoice = Banner invoices
 invoice.artistInvoice = Accepted offers invoices
 
 invoice.performance = Performance
+invoice.offer.money = Offert
+invoice.offers = Offers
+invoice.back = Back
+
+invoice.name = Name
+invoice.lastModified = Last modification
+invoice.conditions = Conditions
+invoice.banner = Banner
