--- a/Acme-Circus/src/main/webapp/views/invoice/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/invoice/messages_es.properties
@@ -13,9 +13,18 @@ invoice.date = Fecha
 invoice.description = Descripción
 invoice.img = Imagen
 invoice.show = Mostrar
+invoice.fee = Comisión
 
 invoice.circusInvoice = Facturas del circo
 invoice.bannerInvoice = Facturas de anuncios
 invoice.artistInvoice = Facturas de ofertas aceptadas
 
 invoice.performance = Actuación
+invoice.offer.money = Oferta
+invoice.offers = Ofertas
+invoice.back = Atrás
+
+invoice.name = Nombre
+invoice.lastModified = Última modificación
+invoice.conditions = Condiciones
+invoice.banner = Anuncio
