--- a/Acme-Circus/src/main/webapp/views/offer/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/offer/messages.properties
@@ -19,6 +19,7 @@ offer.performance= Performances
 offer.message.comma = Observation separated by commas
 offer.tour = Tour
 offer.accept = Accept
+offer.confirm = Confirm
 offer.reject = Reject
 offer.message.error = Conditions must be filled
 offer.message.date = You have already had commitments on this date
