--- a/Acme-Circus/src/main/webapp/views/offer/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/offer/messages_es.properties
@@ -18,6 +18,7 @@ offer.performance= Actuaciones
 offer.message.comma = Observaciones separadas por comas
 offer.tour = Tour
 offer.accept = Aceptar
+offer.confirm = Confirmar
 offer.reject = Rechazar
 offer.message.error = Las condiciones tienen que estar rellenas.
 offer.message.date = Ya tienes compromisos para esta fecha
