Req fallos javi

--- a/Acme-Circus/src/main/webapp/views/offer/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/offer/messages.properties
@@ -11,7 +11,7 @@ offer.status=Status
 offer.lastUpdate=Last Update
 offer.conditions= Conditions
 offer.money= Money
-offer.create = Create a performance
+offer.create = Create a offer
 offer.edit = Edit
 offer.save = Save
 offer.delete = Delete
