--- a/Acme-Circus/src/main/webapp/views/invoice/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/invoice/messages.properties
@@ -27,3 +27,7 @@ invoice.name = Name
 invoice.lastModified = Last modification
 invoice.conditions = Conditions
 invoice.banner = Banner
+
+invoice.alreadyGen = Invoices of the current month have been already generated
+invoice.gen = Generate
+invoice.click = Click the button to generate the invoices
