--- a/Acme-Circus/src/main/webapp/views/invoice/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/invoice/messages_es.properties
@@ -28,3 +28,7 @@ invoice.name = Nombre
 invoice.lastModified = Última modificación
 invoice.conditions = Condiciones
 invoice.banner = Anuncio
+
+invoice.alreadyGen = Ya se han generado las facturas de este mes
+invoice.gen = Generar
+invoice.click = Pulse el botón para generar las facturas
