--- a/Acme-Circus/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/master-page/messages.properties
@@ -13,6 +13,7 @@ master.page.administrator.actor	= Actors list
 master.page.administrator.stats = Stats
 master.page.administrator.circus = Circus list
 master.page.invoices = Invoices
+master.page.administrator.generate = Generate invoices
 
 master.page.administrator.fee = Fee
 
