--- a/Acme-Circus/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/master-page/messages_es.properties
@@ -13,6 +13,7 @@ master.page.administrator.actor	= Lista de actores
 master.page.administrator.stats = Estadísticas
 master.page.administrator.circus = Lista de Circos
 master.page.invoices = Facturas
+master.page.administrator.generate = Generar facturas
 
 
 master.page.administrator.fee = Tarifas
