--- a/Acme-Circus/src/main/webapp/views/banner/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/banner/messages_es.properties
@@ -16,7 +16,7 @@ banner.tour= Gira
 banner.save= Guardar
 banner.cancel = Cancelar
 banner.edit= Editar
-banner.create= Crear Banner
+banner.create= Crear Anuncio
 
 banner.commit.error= No se ha podido completar la operacion
 banner.commit.errorEndDate= La fecha de fin no puede ser anterior a la de inicio
