--- a/Acme-Circus/src/main/webapp/views/purchase/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/purchase/messages.properties
@@ -7,6 +7,7 @@
 # http://www.tdg-seville.info/License.html
 purchase.num = Amount
 purchase.category= Category of price
+purchase.type = Types of Tickets
 
 purchase.save = Buy
 purchase.cancel= Cancel
@@ -22,5 +23,7 @@ ticket.refNumber = Reference number
 ticket.categoryPrice = Category Price
 purchase.commit.error= Commit error
 ticket.amount= Price
+purchase.amount= Price
+
 limit.tickets= You can buy up to 
 purchase.commit.error.limit= You can not buy more tickets than the ones that are available.
