--- a/Acme-Circus/src/main/webapp/views/purchase/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/purchase/messages_es.properties
@@ -11,6 +11,7 @@ purchase.category= Categoria del precio
 
 purchase.save= Comprar
 purchase.cancel= Cancelar
+purchase.type = Tipos de entradas
 
 purchase.stop = Parada
 purchase.surnames= Apellidos
@@ -23,5 +24,7 @@ ticket.refNumber = Numero de referencia
 ticket.categoryPrice = Categoria del precio
 purchase.commit.error= No se puede completar la acción.
 ticket.amount= Precio
+purchase.amount= Precio
+
 limit.tickets= Puedes comprar hasta un total de 
 purchase.commit.error.limit= No puedes comprar mas entradas de las disponibles.
