--- a/Acme-Circus/src/main/webapp/views/tour/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/tour/messages_es.properties
@@ -36,3 +36,4 @@ tour.validated.error = No puedes editar una gira que ya esté validada
 tour.date.error = La fecha de fin no puede ser anterior a la fecha de comienzo.
 tour.actual.error = La fecha de comienzo de un tour no puede ser una fecha pasada
 tour.commit.error = Ha ocurrido un error
+tour.datebetween.error = No puedes crear un tour para tu circo si ya hay otro tour en esa fecha
