--- a/Acme-Circus/src/main/webapp/views/stop/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/stop/messages.properties
@@ -14,7 +14,7 @@ stop.purchase= Purchase
 stop.spotsTotal = Spots total
 stop.spotsAvailable = Spots available
 
-
+stop.tour.name = Tour name
 stop.tour.validated = Validated tour
 stop.yes = Yes
 stop.no = No
@@ -27,8 +27,10 @@ stop.delete = Delete
 stop.save = Save
 stop.delete.confirmation = Are you sure you want to delete this stop?
 
+stop.spots.error = Spots avaiables must be less than total spots
+
 stop.validated.error = You cant modify a stop whose tour is already validated
 stop.commit.error = Something went wrong
-stop.afterDate.error = Stop date can not be before tour start date
-stop.beforeDate.error = Stop date can not be after tour end date
+stop.afterDate.error = Stop date must be between its tour date
+stop.beforeDate.error = Stop date must be between its tour date
 stop.samedate.error = There can't be two stops from the same tour at the same date.
