--- a/Acme-Circus/src/main/webapp/views/stop/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/stop/messages_es.properties
@@ -15,6 +15,7 @@ stop.purchase= Comprar
 stop.spotsTotal = Numero de entradas
 stop.spotsAvailable = Entradas disponibles
 
+stop.tour.name = Tour al que pertenece la parada
 stop.tour.validated = Tour validado
 stop.yes = Si
 stop.no = No
@@ -27,8 +28,10 @@ stop.save = Guardar
 stop.delete = Eliminar
 stop.delete.confirmation = ¿Está seguro que desea eliminar esta parada?
 
+stop.spots.error = Las entradas disponibles deben ser menos que las entradas totales
+
 stop.validated.error = No puedes modificar una parada cuyo tour está validado.
 stop.commit.error = Ha ocurrido un error
-stop.afterDate.error = La fecha de la parada no puede ser anterior a la fecha de inicio de la gira
-stop.samedate.error = No pueden haber dos paradas del mismo tour con la misma fecha 
+stop.afterDate.error = La fecha de la parada debe de estar entre las fechas de su tour
+stop.samedate.error = La fecha de la parada debe de estar entre las fechas de su tour
 stop.beforeDate.error = La fecha de la parada no puede ser posterior a la fecha de finalización del tour
