--- a/Acme-Circus/src/main/webapp/views/attendee/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/attendee/messages.properties
@@ -40,6 +40,7 @@ attendee.commit.error = Cannot commit operation
 attendee.username.error = Username not available
 attendee.email.error = There is another account with that email
 attendee.password.error = Passwords do not match
+attendee.date.error = BornDate have to be at past
 
 attendee.vat.pattern = ES is the optional Spanish prefix, A is an alphanumeric character and N is an numeric character
 
