--- a/Acme-Circus/src/main/webapp/views/attendee/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/attendee/messages_es.properties
@@ -38,7 +38,7 @@ attendee.commit.error = No se pudo completar la acción
 attendee.username.error = Nombre de usuario no disponible
 attendee.email.error = Ya existe una cuenta con ese email
 attendee.password.error = Las contraseñas no coinciden
-
+attendee.date.error = La fecha de nacimiento debe ser en el pasado
 
 attendee.vat.pattern = ES es el prefijo español opcional, A es un caracter alfanumérico y N es un caracter numérico
 attendee.expired.card.error = La tarjeta de crédito ha expirado
