--- a/Acme-Circus/src/main/webapp/views/stats/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/stats/messages.properties
@@ -12,7 +12,7 @@ stats.workersNum = Number of workers
 stats.totalOffers = Total number of offers
 stats.mostSpender = Most spender attendee
 
-stats.ratioAcceptedOffersPerArtist = Accepted offers per artist ratio
+stats.ratioAcceptedOffersPerArtist = Confirmed offers per artist ratio
 stats.ratioStopsPerTour = Stops per tour ratio
 stats.mostSpender.show = Show
 
