--- a/Acme-Circus/src/main/webapp/views/stats/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/stats/messages_es.properties
@@ -13,7 +13,7 @@ stats.workersNum = Número de trabajadores
 stats.totalOffers = Número total de ofertas
 stats.mostSpender = Asistente que más dinero ha gastado
 
-stats.ratioAcceptedOffersPerArtist = Ratio de ofertas aceptadas por artista
+stats.ratioAcceptedOffersPerArtist = Ratio de ofertas confirmadas por artista
 stats.ratioStopsPerTour = Ratio de paradas por gira
 stats.mostSpender.show = Mostrar
 
