Validate tours con categoryTour

--- a/Acme-Circus/src/main/webapp/views/tour/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/tour/messages.properties
@@ -39,4 +39,6 @@ tour.validated.error = You can't edit a tour already validated
 tour.commit.error = Something went wrong
 tour.date.error = Start date must be before End date
 tour.actual.error = Start date must be a future date 
+
+tour.categoryprice.error = In order to validate a tour, all the stops from the tour must have at least one category price associated
  
