dashboard y lista admin

--- a/Acme-Circus/src/main/webapp/views/fee/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/fee/messages.properties
@@ -16,4 +16,4 @@ fee.commit.error = Cannot commit operation
 fee.success = Changes were applied successfully
 
 fee.euro = &#8364;
-fee.percent = %
+fee.percent = x100
