--- a/Acme-Circus/src/main/webapp/views/fee/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/fee/messages_es.properties
@@ -17,4 +17,4 @@ fee.commit.error = No se pudo completar la operación
 fee.success = Los cambios se guardaron con éxito
 
 fee.euro =&#8364;
-fee.percent = %
+fee.percent = x100
