--- a/Acme-Circus/src/main/webapp/views/invoice/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/invoice/messages.properties
@@ -16,11 +16,11 @@ invoice.fee = Fee
 
 invoice.circusInvoice = Circus invoices
 invoice.bannerInvoice = Banner invoices
-invoice.artistInvoice = Accepted offers invoices
+invoice.artistInvoice = Confirmed offers invoices
 
 invoice.performance = Performance
-invoice.offer.money = Offert
-invoice.offers = Offers
+invoice.offer.money = Offer
+invoice.offer = Offer
 invoice.back = Back
 
 invoice.name = Name
