--- a/Acme-Circus/src/main/webapp/views/invoice/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/invoice/messages_es.properties
@@ -17,11 +17,11 @@ invoice.fee = Comisión
 
 invoice.circusInvoice = Facturas del circo
 invoice.bannerInvoice = Facturas de anuncios
-invoice.artistInvoice = Facturas de ofertas aceptadas
+invoice.artistInvoice = Facturas de ofertas confirmadas
 
 invoice.performance = Actuación
 invoice.offer.money = Oferta
-invoice.offers = Ofertas
+invoice.offer = Oferta
 invoice.back = Atrás
 
 invoice.name = Nombre
