--- a/Acme-Circus/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/master-page/messages_es.properties
@@ -14,7 +14,7 @@ master.page.administrator.stats = Estadísticas
 master.page.administrator.circus = Lista de Circos
 master.page.invoices = Facturas
 master.page.administrator.generate = Generar facturas
-
+master.page.invoices.admin.list = Facturas mensuales
 
 master.page.administrator.fee = Tarifas
 
