--- a/Acme-Circus/src/main/webapp/views/stats/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/stats/messages.properties
@@ -20,9 +20,7 @@ stats.circus = Circus
 stats.owners = Owners
 stats.organizers = Organizers
 
-stats.total = Total
-stats.monthlyBenefit = Monthly benefit
-
-stats.circusInvoiceBenefits = Circus ticket benefit
-stats.artistInvoiceBenefits = Expenditure per artist
-stats.circusBalance = Circus earning/spending balance
+stats.totalBenefit = Total
+stats.circusEarning = Circus benefits
+stats.bannerEarning = Banners benefits
+stats.artistEarning = Confirmed offers benefits
