--- a/Acme-Circus/src/main/webapp/views/stats/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/stats/messages_es.properties
@@ -21,9 +21,7 @@ stats.circus = Circo
 stats.owners = Dueños
 stats.organizers = Organizadores
 
-stats.total = Total
-stats.monthlyBenefit = Beneficio mensual
-
-stats.circusInvoiceBenefits = Beneficios por entradas de circos
-stats.artistInvoiceBenefits = Gastos de circos por artista
-stats.circusBalance = Balance ganancia/pérdida de los circos
+stats.totalBenefit = Total
+stats.circusEarning = Beneficios por circos
+stats.bannerEarning = Beneficios por anuncios
+stats.artistEarning = Beneficios por ofertas de artistas confirmadas
