--- a/Acme-Circus/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/master-page/messages.properties
@@ -14,6 +14,7 @@ master.page.administrator.stats = Stats
 master.page.administrator.circus = Circus list
 master.page.invoices = Invoices
 master.page.administrator.generate = Generate invoices
+master.page.invoices.admin.list = Monthly invoices
 
 master.page.administrator.fee = Fee
 
