--- a/Acme-Circus/src/main/webapp/views/stats/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/stats/messages.properties
@@ -11,6 +11,7 @@ stats.artistNum = Number of artists
 stats.workersNum = Number of workers
 stats.totalOffers = Total number of offers
 stats.mostSpender = Most spender attendee
+stats.mostSpender.anyone = No purchase has been done yet
 
 stats.ratioAcceptedOffersPerArtist = Confirmed offers per artist ratio
 stats.ratioStopsPerTour = Stops per tour ratio
