--- a/Acme-Circus/src/main/webapp/views/stats/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/stats/messages_es.properties
@@ -12,6 +12,7 @@ stats.artistNum = Número de artistas
 stats.workersNum = Número de trabajadores
 stats.totalOffers = Número total de ofertas
 stats.mostSpender = Asistente que más dinero ha gastado
+stats.mostSpender.anyone = Aún no se ha realizado ninguna compra
 
 stats.ratioAcceptedOffersPerArtist = Ratio de ofertas confirmadas por artista
 stats.ratioStopsPerTour = Ratio de paradas por gira
