--- a/Acme-Circus/src/main/webapp/views/invoice/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/invoice/messages.properties
@@ -13,6 +13,7 @@ invoice.description = Description
 invoice.img = Image
 invoice.show = Show
 invoice.fee = Fee
+invoice.noCircus = There are not active circus currently
 
 invoice.circusInvoice = Circus invoices
 invoice.bannerInvoice = Banner invoices
