--- a/Acme-Circus/src/main/webapp/views/invoice/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/invoice/messages_es.properties
@@ -14,6 +14,7 @@ invoice.description = Descripción
 invoice.img = Imagen
 invoice.show = Mostrar
 invoice.fee = Comisión
+invoice.noCircus = No hay circos activos actualmente
 
 invoice.circusInvoice = Facturas del circo
 invoice.bannerInvoice = Facturas de anuncios
