--- a/Acme-Circus/src/main/webapp/views/stop/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/stop/messages.properties
@@ -33,4 +33,5 @@ stop.validated.error = You cant modify a stop whose tour is already validated
 stop.commit.error = Something went wrong
 stop.afterDate.error = Stop date must be between its tour date
 stop.beforeDate.error = Stop date must be between its tour date
+stop.toursempty.error = You need at least one tour to create stops
 stop.samedate.error = There can't be two stops from the same tour at the same date.
