--- a/Acme-Circus/src/main/webapp/views/stop/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/stop/messages_es.properties
@@ -34,4 +34,5 @@ stop.validated.error = No puedes modificar una parada cuyo tour está validado.
 stop.commit.error = Ha ocurrido un error
 stop.afterDate.error = La fecha de la parada debe de estar entre las fechas de su tour
 stop.samedate.error = La fecha de la parada debe de estar entre las fechas de su tour
+stop.toursempty.error = Debes tener al menos una gira para poder crear paradas
 stop.beforeDate.error = La fecha de la parada no puede ser posterior a la fecha de finalización del tour
