--- a/Acme-Circus/src/main/webapp/views/tour/messages.properties
+++ b/Acme-Circus/src/main/webapp/views/tour/messages.properties
@@ -34,6 +34,7 @@ tour.no = No validated
 tour.create = Create tour
 tour.edit = Edit 
 
+tour.categoryempty.error = You can't create a tour without category
 tour.datebetween.error = You can't create a tour in your circus if there is another tour in that date
 tour.validated.error = You can't edit a tour already validated
 tour.commit.error = Something went wrong
