--- a/Acme-Circus/src/main/webapp/views/tour/messages_es.properties
+++ b/Acme-Circus/src/main/webapp/views/tour/messages_es.properties
@@ -34,7 +34,7 @@ tour.validate = Validar gira
 
 tour.categoryprice.error = Para poder validar un tour, todas sus paradas deben tener asociadas al menos un precio de entrada
 
-
+tour.categoryempty.error = No puedes crear un tour sin categoría
 tour.validated.error = No puedes editar una gira que ya esté validada
 tour.date.error = La fecha de fin no puede ser anterior a la fecha de comienzo.
 tour.actual.error = La fecha de comienzo de un tour no puede ser una fecha pasada
